--- a/MDFast/FiscaliZi.MDFast.csproj
+++ b/MDFast/FiscaliZi.MDFast.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{58220A0C-51B7-4153-BD19-3FC3BEE70A0F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MDFast</RootNamespace>
-    <AssemblyName>MDFast</AssemblyName>
+    <RootNamespace>FiscaliZi.MDFast</RootNamespace>
+    <AssemblyName>FiscaliZi.MDFast</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
