--- a/FiscaliZi.Colinfo/packages.config
+++ b/FiscaliZi.Colinfo/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="Dragablz" version="0.0.3.182" targetFramework="net461" />
   <package id="Fody" version="1.29.2" targetFramework="net461" developmentDependency="true" />
   <package id="MahApps.Metro" version="1.4.1" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.2.1.750" targetFramework="net461" />
+  <package id="MaterialDesignThemes.MahApps" version="0.0.9" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="1.1.0" targetFramework="net461" />
