--- a/FiscaliZi.Colinfo/packages.config
+++ b/FiscaliZi.Colinfo/packages.config
@@ -1,18 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
-  <package id="Dragablz" version="0.0.3.182" targetFramework="net461" />
-  <package id="Fody" version="1.29.2" targetFramework="net461" developmentDependency="true" />
-  <package id="MahApps.Metro" version="1.4.1" targetFramework="net461" />
+  <package id="Dragablz" version="0.0.3.185" targetFramework="net461" />
+  <package id="Fody" version="1.29.4" targetFramework="net461" developmentDependency="true" />
+  <package id="MahApps.Metro" version="1.4.3" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.2.1.750" targetFramework="net461" />
-  <package id="MaterialDesignThemes.MahApps" version="0.0.9" targetFramework="net461" />
+  <package id="MaterialDesignThemes.MahApps" version="0.0.10" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Design" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Relational.Design" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Tools" version="1.1.0-preview4-final" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Caching.Memory" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Options" version="1.1.0" targetFramework="net461" />
@@ -22,7 +31,7 @@
   <package id="MvvmLight" version="5.3.0.0" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.4.0-alpha" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
-  <package id="Npgsql" version="3.1.9" targetFramework="net461" />
+  <package id="Npgsql" version="3.2.0" targetFramework="net461" />
   <package id="Npgsql.EntityFrameworkCore.PostgreSQL" version="1.1.0" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="1.52.1" targetFramework="net461" developmentDependency="true" />
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net461" />
@@ -68,9 +77,11 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
