--- a/NFPush/NFPush.csproj
+++ b/NFPush/NFPush.csproj
@@ -855,6 +855,12 @@
   <ItemGroup>
     <Resource Include="Images\ok2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Zeus\DFe.Utils\DFe.Utils.csproj">
+      <Project>{b4e1a7a6-5d66-4326-8a8d-39338e6fc84c}</Project>
+      <Name>DFe.Utils</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
