--- a/FiscaliZi.Colinfo/packages.config
+++ b/FiscaliZi.Colinfo/packages.config
@@ -31,6 +31,7 @@
   <package id="MvvmLight" version="5.3.0.0" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.4.0-alpha" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.2-beta2" targetFramework="net461" />
   <package id="Npgsql" version="3.2.0" targetFramework="net461" />
   <package id="Npgsql.EntityFrameworkCore.PostgreSQL" version="1.1.0" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="1.52.1" targetFramework="net461" developmentDependency="true" />
