--- a/FiscaliZi.Colinfo/packages.config
+++ b/FiscaliZi.Colinfo/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Caliburn.Micro" version="3.0.3" targetFramework="net461" />
+  <package id="Caliburn.Micro.Core" version="3.0.3" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Dragablz" version="0.0.3.186" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.5.0-alpha002" targetFramework="net461" />
@@ -27,10 +29,7 @@
   <package id="Microsoft.Extensions.Primitives" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="MvvmLight" version="5.3.0.0" targetFramework="net461" />
-  <package id="MvvmLightLibs" version="5.4.0-alpha" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="9.0.2-beta2" targetFramework="net461" />
   <package id="Npgsql" version="3.2.1" targetFramework="net461" />
   <package id="Npgsql.EntityFrameworkCore.PostgreSQL" version="1.1.0" targetFramework="net461" />
   <package id="PostSharp" version="4.3.29" targetFramework="net461" />
