--- a/FiscaliZi.Colinfo/FiscaliZi.Colinfo.csproj
+++ b/FiscaliZi.Colinfo/FiscaliZi.Colinfo.csproj
@@ -279,10 +279,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Assert\Dialog_Conculta.xaml.cs">
+    <Compile Include="Assets\Dialog_Conculta.xaml.cs">
       <DependentUpon>Dialog_Conculta.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Assert\Dialog_ErroConsulta.xaml.cs">
+    <Compile Include="Assets\Dialog_ErroConsulta.xaml.cs">
       <DependentUpon>Dialog_ErroConsulta.xaml</DependentUpon>
     </Compile>
     <Compile Include="ColinfoContext.cs" />
@@ -306,24 +306,24 @@
     <Compile Include="Utils\Funcoes.cs" />
     <Compile Include="Utils\Monitors.cs" />
     <Compile Include="Utils\Unzip.cs" />
-    <Compile Include="Assert\ColetaViewModel.cs" />
-    <Compile Include="Assert\ColinfoBootstrapper.cs" />
-    <Compile Include="Assert\MainViewModel.cs" />
-    <Compile Include="Assert\ColetaView.xaml.cs">
+    <Compile Include="Assets\ColetaViewModel.cs" />
+    <Compile Include="Assets\ColinfoBootstrapper.cs" />
+    <Compile Include="Assets\MainViewModel.cs" />
+    <Compile Include="Assets\ColetaView.xaml.cs">
       <DependentUpon>ColetaView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Assert\FlyPedido.xaml.cs">
+    <Compile Include="Assets\FlyPedido.xaml.cs">
       <DependentUpon>FlyPedido.xaml</DependentUpon>
     </Compile>
-    <Page Include="Assert\Dialog_Conculta.xaml">
+    <Page Include="Assets\Dialog_Conculta.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Assert\Dialog_ErroConsulta.xaml">
+    <Page Include="Assets\Dialog_ErroConsulta.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Assert\MainView.xaml">
+    <Page Include="Assets\MainView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -331,7 +331,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Assert\MainView.xaml.cs">
+    <Compile Include="Assets\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -359,11 +359,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Assert\ColetaView.xaml">
+    <Page Include="Assets\ColetaView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Assert\FlyPedido.xaml">
+    <Page Include="Assets\FlyPedido.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
