--- a/FiscaliZi.Colinfo/FiscaliZi.Colinfo.csproj
+++ b/FiscaliZi.Colinfo/FiscaliZi.Colinfo.csproj
@@ -304,6 +304,10 @@
     <Compile Include="Migrations\20170307032858_mig-5.designer.cs">
       <DependentUpon>20170307032858_mig-5.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\20170309062439_mig-6.cs" />
+    <Compile Include="Migrations\20170309062439_mig-6.designer.cs">
+      <DependentUpon>20170309062439_mig-6.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\ColinfoContextModelSnapshot.cs" />
     <Compile Include="Model\CadCli.cs" />
     <Compile Include="Model\Cliente.cs" />
@@ -316,6 +320,7 @@
     <Compile Include="Model\Pedido.cs" />
     <Compile Include="Model\Produto.cs" />
     <Compile Include="Model\Arquivo.cs" />
+    <Compile Include="Model\Venda.cs" />
     <Compile Include="Utils\Coletor.cs" />
     <Compile Include="Utils\Funcoes.cs" />
     <Compile Include="Utils\Monitors.cs" />
