--- a/MDFast/packages.config
+++ b/MDFast/packages.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Caliburn.Micro" version="3.1.0" targetFramework="net461" />
+  <package id="Caliburn.Micro.Core" version="3.1.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="FluentValidation" version="6.4.0-beta9" targetFramework="net461" />
   <package id="Fody" version="1.29.2" targetFramework="net461" developmentDependency="true" />
   <package id="MahApps.Metro" version="1.4.1" targetFramework="net461" />
+  <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
+  <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net461" />
+  <package id="MaterialDesignThemes.MahApps" version="0.0.10" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="1.1.0" targetFramework="net461" />
@@ -80,4 +85,5 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
+  <package id="Zeus.Net.NFe.NFCe" version="1.0.1.535" targetFramework="net461" />
 </packages>
